# nvim-config

./: Cargo.toml
nvim-api-helper/: Cargo.toml
nvim-api-helper/nvim-tests/: Cargo.toml
nvim-api-helper/nvim-tests/src/: async_utils.rs  buffer.rs  lib.rs
nvim-api-helper/src/: async_utils.rs  buffer.rs  error.rs  lib.rs  lua.rs  lua_plugins.rs
nvim-config/: Cargo.toml
nvim-config/src/: keymap.rs
nvim-config/src/plugins/: cinnamon.rs  leap.rs  lsp.rs  lua_plugins.rs  mod.rs  spectre.rs  telescope.rs
src/: error.rs  keymap.rs  keymap_remapping.rs  lib.rs  lua_plugins.rs  utils.rs
src/plugins/: cinnamon.rs  leap.rs  llm.rs  lsp.rs  lua_plugin.rs  lua_plugins.rs  mod.rs  neoscroll.rs  plugin.rs  spectre.rs  telescope.rs
