[package]
name = "nvim-api-helper"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
itertools = "0.14.0"
nvim-oxi = { version = "0.5.1", features = ["libuv", "mlua", "neovim-0-10", "test"] }
thiserror = "2.0.11"
tokio = { version = "1.44.2", features = ["full"] }

[dev-dependencies]
nvim-tests = { path = "nvim-tests" }
